--- a/css/main.css
+++ b/css/main.css
@@ -375,13 +375,59 @@ body {
   padding: 0 25px;
 }
 
+.modal__ifrem {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.829);
+  z-index: 200;
+  display: none;
+}
+
+.ifrem-box {
+  width: 100%;
+  height: 100%;
+}
+
+.ifrem {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 80%;
+  height: 70%;
+}
+
+.ifrem__remov-btn {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  width: 60px;
+  height: 60px;
+  border: none;
+  background: #4b4a4a;
+  border-radius: 50%;
+  color: white;
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.ifrem__remov-btn:hover {
+  background: #615f5f;
+}
+
+.ifrem_show {
+  display: block;
+}
+
 .modall {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.356);
+  background: rgba(0, 0, 0, 0.7);
   z-index: -100;
   opacity: 0;
   -webkit-transition: all 0.3s ease;
@@ -390,7 +436,7 @@ body {
 
 .modal__inner {
   position: absolute;
-  top: 50%;
+  top: -100%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -417,8 +463,9 @@ body {
 }
 
 .modal__img-box {
+  padding-top: 50px;
   width: 50%;
-  height: 100%;
+  height: 90%;
   overflow: hidden;
   border-radius: 10px;
 }
@@ -431,8 +478,13 @@ body {
   border-radius: 10px;
 }
 
+.img-link {
+  width: 100%;
+  height: 100%;
+}
+
 .modal__title {
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 700;
   color: #333;
   margin-bottom: 20px;
@@ -445,6 +497,21 @@ body {
   margin-top: 60px;
   padding: 20px;
   padding-left: 40px;
+}
+
+.modal__cont {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .modal__icon {
@@ -463,6 +530,14 @@ body {
   background: #6b6969;
 }
 
+.modal__text-box {
+  width: 100%;
+  height: 80%;
+  padding-bottom: 40px;
+  padding-right: 20px;
+  overflow-y: scroll;
+}
+
 .modal__text {
   font-size: 20px;
   font-weight: 700;
@@ -471,15 +546,26 @@ body {
 
 .movies {
   width: 100%;
-  height: auto;
+  height: 100%;
   background: white;
 }
 
 .mov__hero {
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: 80%;
   overflow: hidden;
+}
+
+.hero-lgg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.404)));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.404));
+  z-index: 2;
 }
 
 .carousel-inner {
@@ -487,9 +573,54 @@ body {
   height: 800px;
 }
 
+.carousel-indicators {
+  position: absolute;
+  top: 50%;
+  left: auto;
+  right: 50px;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  width: 60px;
+  height: 140px;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 50;
+}
+
 .carousel-item {
   padding-top: 20px;
   margin-top: -70px;
+}
+
+.carousel-indicators [data-bs-target] {
+  position: relative;
+  width: 0px;
+  margin: 12px 0;
+  font-size: 20px;
+  font-weight: 700;
+  text-indent: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+  border-radius: 10px;
+  border: none;
+  z-index: 10;
+}
+
+.carousel-indicators [data-bs-target].active {
+  width: 27px;
+  height: 4px;
+  font-size: 30px;
 }
 
 .car-item1 {
@@ -516,17 +647,28 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url("/images/loki.jpg");
-  background-position: center bottom;
+  background-image: url("/images/hero-img-3.webp");
+  background-position: center top;
 }
 
-.car-btn {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%);
-  width: 100px;
-  height: 100px;
+.car-item4 {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url("/images/hero-img-4.jpeg");
+  background-position: center top;
+}
+
+.car-item5 {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url("/images/hero-img-5.jpg");
+  background-position: center top;
 }
 
 .hero__top {
@@ -608,6 +750,7 @@ body {
           transform: translate(0, -50%);
   width: auto;
   height: auto;
+  z-index: 100;
 }
 
 .hero__desc {
@@ -631,9 +774,9 @@ body {
 .hero__text {
   height: auto;
   font-family: sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 18px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
   color: #fff;
 }
 
@@ -750,7 +893,7 @@ body {
 }
 
 .mov__item {
-  width: 320px;
+  width: 310px;
   padding: 30px;
 }
 
@@ -773,23 +916,33 @@ body {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  cursor: pointer;
 }
 
 .mitem__icon {
   position: absolute;
   top: 10px;
   right: 10px;
+  width: 40px;
+  height: 40px;
   color: #fff;
   padding: 5px 7px 1px 7px;
   border-radius: 50%;
   border: none;
-  background: rgba(243, 244, 246, 0.5);
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
+  background: #f30000;
 }
 
-.mitem__icon:focus {
-  background: rgba(88, 88, 88, 0.9);
+.m-ite-act::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-54%, -50%);
+          transform: translate(-54%, -50%);
+  width: 13px;
+  height: 11.5px;
+  border-radius: 2px 2px 15px 15px;
+  background: #fff;
 }
 
 .mitem__tit {
@@ -897,5 +1050,318 @@ body {
 
 .mlis__btn2 {
   right: -50px;
+}
+
+.carusel_box {
+  width: 500px;
+  height: 900px;
+  -webkit-transform: rotateZ(-90deg);
+          transform: rotateZ(-90deg);
+}
+
+.main__con-box {
+  width: 100%;
+  height: 80px;
+  margin: 10px 0;
+}
+
+.con__box {
+  width: 100%;
+  height: auto;
+  padding: 0 30px;
+}
+
+.con__form {
+  width: 100%;
+  height: auto;
+  padding-bottom: 30px;
+  padding-right: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.con__form_input {
+  width: 350px;
+  height: 40px;
+  font-size: 22px;
+  font-weight: 500;
+  padding: 0 10px;
+  outline: none;
+  border: none;
+  background: transparent;
+  border: 1px solid #333;
+  border-radius: 10px;
+  margin-right: 30px;
+}
+
+.selec-categor {
+  width: 200px;
+  height: 40px;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 0px 10px;
+  outline: none;
+  border: none;
+  background: transparent;
+  border: 1px solid #333;
+  border-radius: 10px;
+  margin-right: 30px;
+}
+
+.selec-years1 {
+  width: 80px;
+  height: 40px;
+  padding-left: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  outline: none;
+  border: none;
+  background: transparent;
+  border: 1px solid #333;
+  border-radius: 10px;
+  margin-right: 30px;
+}
+
+.selec-alp {
+  width: 80px;
+  height: 40px;
+  padding-left: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  outline: none;
+  border: none;
+  background: transparent;
+  border: 1px solid #333;
+  border-radius: 10px;
+  margin-right: 30px;
+}
+
+.form-search-btn {
+  font-size: 22px;
+  font-weight: 700;
+  color: #fff;
+  background: #444;
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 7px 15px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.form-search-btn:hover {
+  color: #fff;
+  background: #666;
+}
+
+.hero_search_box {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: auto;
+  background: #d8d8d8;
+  z-index: 220;
+  overflow: hidden;
+  display: none;
+}
+
+.box-none {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  z-index: -10;
+}
+
+.he-box__inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.he-box__list {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: white;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.he-box__btns {
+  width: 200px;
+  height: 40px;
+  margin: 20px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.he-box__remBtn {
+  padding: 5px 15px;
+  font-size: 25px;
+  font-weight: 700;
+  color: #fff;
+  background: #333;
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.he-box__remBtn:hover {
+  background: #666;
+}
+
+.he-box__ov {
+  width: 122px;
+  height: 100%;
+  overflow: hidden;
+}
+
+.he-box__w {
+  width: auto;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.h-btn {
+  width: 30px;
+  height: 30px;
+  margin: 0 3px;
+  padding: 4px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  background: #666;
+}
+
+.act-btn {
+  width: 36px;
+  height: 36px;
+  background: #444;
+}
+
+.point-span {
+  font-size: 28px;
+  font-weight: 700;
+  color: #555;
+}
+
+.my-off-box {
+  width: 100%;
+  height: 100%;
+}
+
+.my__list {
+  width: 100%;
+  height: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  padding-right: 20px;
+  overflow-y: scroll;
+}
+
+.my__item {
+  position: relative;
+  padding: 0;
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+  overflow: hidden;
+  border: 2px solid #777777;
+  border-radius: 10px;
+}
+
+.my__img-box {
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.my__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+}
+
+.my__tit {
+  font-size: 18px;
+  font-weight: 700;
+  color: #555;
+  margin-bottom: 10px;
+  padding-left: 10px;
+}
+
+.my__title {
+  font-size: 30px;
+  font-weight: 600;
+  color: #333;
+  padding-left: 10px;
+}
+
+.my__price {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-left: 10px;
+}
+
+.my__rating {
+  font-size: 22px;
+  font-weight: 700;
+  color: #333;
+}
+
+.my__janr {
+  font-size: 20px;
+  font-weight: 700;
+  color: #444;
 }
 /*# sourceMappingURL=main.css.map */
