--- a/scss/block/_modal.scss
+++ b/scss/block/_modal.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.356);
+  background: rgba(0, 0, 0, 0.7);
   z-index: -100;
   opacity: 0;
   transition: all 0.3s ease;
@@ -12,7 +12,7 @@
 
 .modal__inner {
   position: absolute;
-  top: 50%;
+  top: -100%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 50%;
@@ -40,8 +40,9 @@
 }
 
 .modal__img-box {
+  padding-top: 50px;
   width: 50%;
-  height: 100%;
+  height: 90%;
   overflow: hidden;
   border-radius: 10px;
 }
@@ -53,8 +54,13 @@
   border-radius: 10px;
 }
 
+.img-link {
+  width: 100%;
+  height: 100%;
+}
+
 .modal__title {
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 700;
   color: #333;
   margin-bottom: 20px;
@@ -67,6 +73,16 @@
   margin-top: 60px;
   padding: 20px;
   padding-left: 40px;
+}
+
+.modal__cont {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .modal__icon {
@@ -85,6 +101,14 @@
   &:focus {
     background: rgb(107, 105, 105);
   }
+}
+
+.modal__text-box {
+  width: 100%;
+  height: 80%;
+  padding-bottom: 40px;
+  padding-right: 20px;
+  overflow-y: scroll;
 }
 
 .modal__text {
